<resources>
    <string name="app_name">BusHawk</string>
    <string name="BusHawk">BusHawk</string>
    <string name="title_activity_bus_view">Bus Information</string>
    <string name="eatonHallStopText">Stop #369: Eaton Hall/Engr</string>
    <string name="eatonHallListOfStops">Routes: 10 11 29 30 41 43</string>
    <string name="nextArrivalsText">Next Arrivals</string>
    <string name="route30text">Route 30</string>
    <string name="firstBusButton">Bus 001</string>
    <string name="routeBusesText">Buses Running</string>
    <string name="busViewBusNumber">Bus #100</string>
    <string name="busViewRouteNubmer">Route 30</string>
    <string name="nextStopText">Next Stop</string>
    <string name="busViewBusNumText">Bus #100</string>
    <string name="busViewRouteNumText">Route 30</string>
    <string name="busViewRouteNum">Route 30</string>
    <string name="busViewNextStopText">Eaton Hall</string>
    <string name="routeStopsServedText">Stops Served</string>
    <string name="routeRouteNumber">Route 30</string>
</resources>
